[package]
name = "fe310-monotonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
e310x-hal = { git = "https://github.com/riscv-rust/e310x-hal.git", rev = "94b6474" }
fugit = "0.3"
rtic-monotonic = "1.0"
